// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content: - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render default - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.arrowPointAtCenter: true - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.autoAdjustOverflow: false - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.autoAdjustOverflow: true - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.color: blue - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.defaultVisible: true - value[0] 1`] = `
<span
  class="ant-tooltip-open"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.mouseEnterDelay: 1 - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.mouseLeaveDelay: 1 - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.overlayStyle: border: 5px solid blue - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.placement - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.title - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.title with html - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.trigger: click - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render properties.zIndex: 100 - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true areas.content: - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true default - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.arrowPointAtCenter: true - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.autoAdjustOverflow: false - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.autoAdjustOverflow: true - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.color: blue - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.defaultVisible: true - value[0] 1`] = `
<span
  class="ant-tooltip-open"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.mouseEnterDelay: 1 - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.mouseLeaveDelay: 1 - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.overlayStyle: border: 5px solid blue - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.placement - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.title - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.title with html - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.trigger: click - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Render required = true properties.zIndex: 100 - value[0] 1`] = `
<span>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  
</span>
`;

exports[`Test Schema areas.content: 1`] = `true`;

exports[`Test Schema areas.content: 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.arrowPointAtCenter: true 1`] = `true`;

exports[`Test Schema properties.arrowPointAtCenter: true 2`] = `null`;

exports[`Test Schema properties.autoAdjustOverflow: false 1`] = `true`;

exports[`Test Schema properties.autoAdjustOverflow: false 2`] = `null`;

exports[`Test Schema properties.autoAdjustOverflow: true 1`] = `true`;

exports[`Test Schema properties.autoAdjustOverflow: true 2`] = `null`;

exports[`Test Schema properties.color: blue 1`] = `true`;

exports[`Test Schema properties.color: blue 2`] = `null`;

exports[`Test Schema properties.defaultVisible: true 1`] = `true`;

exports[`Test Schema properties.defaultVisible: true 2`] = `null`;

exports[`Test Schema properties.mouseEnterDelay: 1 1`] = `true`;

exports[`Test Schema properties.mouseEnterDelay: 1 2`] = `null`;

exports[`Test Schema properties.mouseLeaveDelay: 1 1`] = `true`;

exports[`Test Schema properties.mouseLeaveDelay: 1 2`] = `null`;

exports[`Test Schema properties.overlayStyle: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.overlayStyle: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.placement 1`] = `true`;

exports[`Test Schema properties.placement 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema properties.title with html 1`] = `true`;

exports[`Test Schema properties.title with html 2`] = `null`;

exports[`Test Schema properties.trigger: click 1`] = `true`;

exports[`Test Schema properties.trigger: click 2`] = `null`;

exports[`Test Schema properties.zIndex: 100 1`] = `true`;

exports[`Test Schema properties.zIndex: 100 2`] = `null`;
